Color Palette Changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="navbar-header">
                     <!--navigation logo start-->
                     <a href="#" class="navbar-brand float-end">
-                        <span class="custom-highlight p-1">Pawsome</span> <i class="fa-solid fa-paw"></i> <span
+                        <span class="custom-highlight p-1">Pawsome</span> <i class=" logo-brand-color fa-solid fa-paw"></i> <span
                             class="custom-highlight p-1">Products</span>
                     </a>
                 </div>
@@ -158,9 +158,9 @@
                             <h4 class="card-title">Nylon Collars</h4>
                             <p class="card-text">Durable nylon collar, built for walkies & adventures.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="float-start">
-                                <h4 class="custom-highlight">$22.99</h4>
+                                <h4 class="custom-price-highlight">$22.99</h4>
                             </div>
                             <div class="float-end">
                                 <button class="btn rounded-3 custom-btn"><i class="fas fa-shopping-cart"></i> BUY
@@ -176,9 +176,9 @@
                             <h4 class="card-title">Polyester Collars</h4>
                             <p class="card-text">Smooth, strong polyester collar for comfy walks.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="float-start">
-                                <h4 class="custom-highlight">$25.99</h4>
+                                <h4 class="custom-price-highlight">$25.99</h4>
                             </div>
                             <div class="float-end">
                                 <button class="btn rounded-3 custom-btn" type="button"><i
@@ -194,9 +194,9 @@
                             <h4 class="card-title">Leather Collar</h4>
                             <p class="card-text">Supple leather collar, timeless style & comfort.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="float-start">
-                                <h4 class="custom-highlight">$30.99</h4>
+                                <h4 class="custom-price-highlight">$30.99</h4>
                             </div>
                             <div class="float-end">
                                 <button class="btn rounded-3 custom-btn"><i class="fas fa-shopping-cart"></i> BUY
@@ -220,7 +220,7 @@
                             <h4 class="card-title">Dog Food</h4>
                             <p class="card-text">Grain-free & protein-rich options! Fuel your pup's adventures.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="d-flex justify-content-center">
                                 <button class="btn rounded-3 custom-btn">See More</button>
                             </div>
@@ -235,7 +235,7 @@
                             <p class="card-text">Jerky treats, freeze-dried bites, & more! Delicious rewards for every
                                 good pup.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="d-flex justify-content-center">
                                 <button class="btn rounded-3 custom-btn">See More</button>
                             </div>
@@ -250,7 +250,7 @@
                             <p class="card-text">Squeaky fun, ropey challenges, or plush pals! Our toys fetch,
                                 tug, and satisfy every pup's playtime needs.</p>
                         </div>
-                        <div class="card-footer custom-footer">
+                        <div class="card-footer custom-card-footer">
                             <div class="d-flex justify-content-center">
                                 <button class="btn rounded-3 custom-btn">See More</button>
                             </div>
@@ -268,9 +268,9 @@
                     <div class="card custom-card">
                         <h2 class="d-block mt-3 text-uppercase text-center">Woof at us!</h2>
                         <div class="p-3">
-                            <div class="p-5 bg-light rounded-3">
+                            <div class="p-5 bg-transparent rounded-3">
                                 <!----form start---->
-                                <form class="row g-3">
+                                <form class="row g-3 ">
                                     <div class="col-md-4">
                                       <label for="validationDefault01" class="form-label">Your Name</label>
                                       <input type="text" class="form-control" id="validationDefault01" placeholder="Sir Barks-a-Lot" required>
@@ -310,7 +310,7 @@
     <!----main section end---->
 
     <!----footer start---->
-    <footer id="footer" class="bg-light text-center text-lg-start mt-5">
+    <footer id="footer" class="footer-background text-center text-lg-start mt-5">
         <div class="container p-4">
             <div class="row ms-md-5">
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
