Added favicon image and additional comments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pawsome Products</title>
+    <link href="Icons/favicon.ico" rel="icon" type="image/x-icon">
     <!----bootstrap css---->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!----main css---->
@@ -21,8 +22,8 @@
         <!----navigation bar start---->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow custom-navbar">
             <div class="container container-fluid">
+                <!--navigation logo start-->
                 <div class="navbar-header">
-                    <!--navigation logo start-->
                     <a href="#" class="navbar-brand float-end">
                         <span class="custom-highlight p-1">Pawsome</span> <i class=" logo-brand-color fa-solid fa-paw"></i> <span
                             class="custom-highlight p-1">Products</span>
@@ -36,8 +37,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <!--menu button "hamburguer" end-->
                 </div>
+                <!--menu button "hamburguer" end-->
                 <!--navigation bar menu list start-->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ms-auto custom-ul">
@@ -80,7 +81,7 @@
                         <p class="animate__animated animate__backInUp">Flash Sale! 15% off + Free Shipping on all dog
                             treats! Ends 04/21/2024. Spoil your pup guilt-free!</p>
                         <button class="btn custom-btn animate__animated animate__backInUp" type="button"><i
-                                class="fas fa-shopping-cart"></i> BUY NOW</button>
+                                class="fa-solid fa-shopping-cart"></i> BUY NOW</button>
                     </div>
                 </div>
             </div>
@@ -163,7 +164,7 @@
                                 <h4 class="custom-price-highlight">$22.99</h4>
                             </div>
                             <div class="float-end">
-                                <button class="btn rounded-3 custom-btn"><i class="fas fa-shopping-cart"></i> BUY
+                                <button class="btn rounded-3 custom-btn"><i class="fa-solid fa-shopping-cart"></i> BUY
                                     NOW</button>
                             </div>
                         </div>
@@ -182,7 +183,7 @@
                             </div>
                             <div class="float-end">
                                 <button class="btn rounded-3 custom-btn" type="button"><i
-                                        class="fas fa-shopping-cart"></i> BUY NOW</button>
+                                        class="fa-solid fa-shopping-cart"></i> BUY NOW</button>
                             </div>
                         </div>
                     </div>
@@ -199,7 +200,7 @@
                                 <h4 class="custom-price-highlight">$30.99</h4>
                             </div>
                             <div class="float-end">
-                                <button class="btn rounded-3 custom-btn"><i class="fas fa-shopping-cart"></i> BUY
+                                <button class="btn rounded-3 custom-btn"><i class="fa-solid fa-shopping-cart"></i> BUY
                                     NOW</button>
                             </div>
                         </div>
